Fix: nav spacing

--- a/templates/assets/scss/base/_header.scss
+++ b/templates/assets/scss/base/_header.scss
@@ -23,7 +23,7 @@
     display: flex;
     padding-top: 5px;
     @media screen and (max-width: $small-screen) {
-      padding-top: 0;
+      padding-top: $spacer;
     }
 
     li {
